chore: facility/src/proposal

--- a/core/fcredit/facility/Cargo.toml
+++ b/core/fcredit/facility/Cargo.toml
@@ -13,6 +13,7 @@ outbox = { workspace = true }
 core-money = { workspace = true }
 core-price = { workspace = true }
 core-custody = { workspace = true }
+core-customer = { workspace = true }
 governance = { workspace = true }
 public-id = { workspace = true }
 credit-terms = { package = "core-fcredit-terms", path = "../terms" }
