feat: hit webhook from dagster

--- a/dagster/Dockerfile
+++ b/dagster/Dockerfile
@@ -34,7 +34,9 @@ RUN pip install \
     dbt-bigquery~=1.10.3 \
     dlt[bigquery]~=1.18.1 \
     dagster-dlt~=${DAGSTER_EXT_VERSION} \
-    pandas
+    dbt-bigquery~=1.10.3 \
+    pandas \
+    requests
 
 # Add our project specific code
 RUN mkdir -p /lana-dw
