--- a/docker-compose.docker.yml
+++ b/docker-compose.docker.yml
@@ -7,3 +7,9 @@ x-hostgw: &hostgw
 services:
   oathkeeper:
     <<: *hostgw
+
+  dagster-code-location-lana-dw:
+    <<: *hostgw
+
+  dagster_daemon:
+    <<: *hostgw
