--- a/deny.toml
+++ b/deny.toml
@@ -227,6 +227,11 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "dagster"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "dashboard"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
