--- a/dagster/src/dbt_lana_dw/models/sources.yml
+++ b/dagster/src/dbt_lana_dw/models/sources.yml
@@ -5,6 +5,88 @@ sources:
     dataset: "{{ env_var('TARGET_BIGQUERY_DATASET', '') }}"
     tables:
 
+      - name: bitfinex_order_book_dlt
+        freshness:
+          warn_after:
+            count: 2
+            period: day
+          error_after:
+            count: 7
+            period: day
+
+      - name: bitfinex_order_book_dlt__orders
+        freshness:
+          warn_after:
+            count: 2
+            period: day
+          error_after:
+            count: 7
+            period: day
+
+      - name: bitfinex_ticker_dlt
+        freshness:
+          warn_after:
+            count: 2
+            period: day
+          error_after:
+            count: 7
+            period: day
+
+      - name: bitfinex_trades_dlt
+        freshness:
+          warn_after:
+            count: 2
+            period: day
+          error_after:
+            count: 7
+            period: day
+
+
+      - name: cala_account_set_member_account_sets
+        freshness:
+          warn_after:
+            count: 2
+            period: day
+          error_after:
+            count: 7
+            period: day
+
+      - name: cala_account_set_member_accounts
+        freshness:
+          warn_after:
+            count: 2
+            period: day
+          error_after:
+            count: 7
+            period: day
+
+      - name: cala_account_sets
+        freshness:
+          warn_after:
+            count: 2
+            period: day
+          error_after:
+            count: 7
+            period: day
+
+      - name: cala_accounts
+        freshness:
+          warn_after:
+            count: 2
+            period: day
+          error_after:
+            count: 7
+            period: day
+
+      - name: cala_balance_history
+        freshness:
+          warn_after:
+            count: 2
+            period: day
+          error_after:
+            count: 7
+            period: day
+
       - name: core_chart_events_rollup
 
       - name: core_collateral_events_rollup
@@ -23,7 +105,7 @@ sources:
 
       - name: core_interest_accrual_cycle_events_rollup
 
-      - name: core_liquidation_process_events_rollup
+      - name: core_liquidation_events_rollup
 
       - name: core_obligation_events_rollup
 
