--- a/lana/notification/Cargo.toml
+++ b/lana/notification/Cargo.toml
@@ -28,6 +28,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 async-trait = { workspace = true }
 futures = { workspace = true }
+tokio = { workspace = true }
 thiserror = { workspace = true }
 strum = { workspace = true }
 handlebars = { workspace = true }
