--- a/lana/user-onboarding/Cargo.toml
+++ b/lana/user-onboarding/Cargo.toml
@@ -21,6 +21,7 @@ es-entity = { workspace = true, features = ["graphql"] }
 serde = { workspace = true }
 async-trait = { workspace = true }
 futures = { workspace = true }
+tokio = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-macros = { workspace = true }
