--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ document-storage = { path = "core/document-storage" }
 governance = { path = "core/governance" }
 public-id = { path = "core/public-id" }
 domain-config = { path = "core/domain-config" }
+core-time-events = { path = "core/time-events" }
 
 # Lana dependencies
 admin-server = { path = "lana/admin-server" }
@@ -93,6 +94,8 @@ chrono = { version = "0.4.42", features = [
   "clock",
   "serde",
 ], default-features = false }
+chrono-tz = "0.10.4"
+
 clap = { version = "4.5.53", features = ["derive", "env"] }
 derive_builder = "0.20.0"
 graphql_client = { version = "0.14.0", features = ["reqwest-rustls"] }
