fix: stg accounts yml

--- a/dagster/src/dbt_lana_dw/models/staging/stg_accounts.yml
+++ b/dagster/src/dbt_lana_dw/models/staging/stg_accounts.yml
@@ -14,7 +14,8 @@ models:
       data_tests:
       - not_null
       - accepted_values:
-          values: ['credit', 'debit']
+          arguments:
+            values: ['credit', 'debit']
     - name: latest_values
       data_tests:
       - not_null:
