--- a/core/credit/Cargo.toml
+++ b/core/credit/Cargo.toml
@@ -57,3 +57,4 @@ authz = { workspace = true, features = ["test-dummy"] }
 anyhow = { workspace = true }
 rand = { workspace = true }
 serde_yaml = { workspace = true }
+domain-config = { workspace = true }
