feat(reporting): sumsub extract and load with dlt (#3206)
* feat: add Sumsub DLT resource module

* feat: add Sumsub DLT resource to fetch applicants and document images

* feat: add sumsub DLT asset and 15m scheduled job

* chore: add sumsub envs

* docs: add local testing steps for Sumsub extractor

* chore: make dagster-fmt`

* fix: remove unused `_utc_now`

* style: add return type to _sumsub_send

* style: add requests.Response return type to _get_applicant_data

* fix: use credentials dict for BigQuery

* feat: add Sumsub resource for Dagster

* refactor: expose single sumsub protoasset

* fix: fetch all from pg before calling sumsub api

and remove callbacks_table arg

* refactor: run sumsub applicants EL with postgres EL schedule

* fix: include boundary rows (>=)

* refactor: read sumsub callbacks from BigQuery and remove Postgres

* feat: add sumsub_applicants job and sensor, remove from nightly job

* fix: use Dagster logger in sumsub DLT resource

* refactor: rename sumsub job/sensor, update comment and asset tag

* fix: use job_name and add asset_materialization_fn for asset sensor

* refactor: extract sumsub sensor to sensors.py and use it

* fix: use strict > for recorded_at and remove unused logging

* chore: dagster-fmt

* refactor: decouple sumsub applicants from Dagster logger

* fix: sumsub sensor fixes

--- a/docker-compose.dagster.yml
+++ b/docker-compose.dagster.yml
@@ -15,7 +15,9 @@ services:
       REPORTS_BUCKET_NAME: ${REPORTS_BUCKET_NAME:-}
       OTEL_EXPORTER_OTLP_ENDPOINT: 'http://otel-agent:4317'
       DAGSTER_AUTOMATIONS_ACTIVE: ${DAGSTER_AUTOMATIONS_ACTIVE:-}
-      LANA_PG_CON: 'postgres://user:password@172.17.0.1:5433/pg'
+      LANA_PG_CON: 'postgres://user:password@core-pg:5432/pg'
+      SUMSUB_KEY: ${SUMSUB_KEY:-}
+      SUMSUB_SECRET: ${SUMSUB_SECRET:-}
       DBT_BIGQUERY_CREDENTIALS_JSON: ${DBT_BIGQUERY_CREDENTIALS_JSON:-}
       DBT_BIGQUERY_PROJECT: ${DBT_BIGQUERY_PROJECT:-}
       DBT_BIGQUERY_DATASET: ${DBT_BIGQUERY_DATASET:-}
