--- a/dagster/src/dbt_lana_dw/models/sources.yml
+++ b/dagster/src/dbt_lana_dw/models/sources.yml
@@ -5,6 +5,24 @@ sources:
     dataset: "{{ env_var('TARGET_BIGQUERY_DATASET', '') }}"
     tables:
 
+      - name: bitfinex_order_book_dlt
+
+      - name: bitfinex_order_book_dlt__orders
+
+      - name: bitfinex_ticker_dlt
+
+      - name: bitfinex_trades_dlt
+
+      - name: cala_account_set_member_account_sets
+
+      - name: cala_account_set_member_accounts
+
+      - name: cala_account_sets
+
+      - name: cala_accounts
+
+      - name: cala_balance_history
+
       - name: core_chart_events_rollup
 
       - name: core_collateral_events_rollup
@@ -23,7 +41,7 @@ sources:
 
       - name: core_interest_accrual_cycle_events_rollup
 
-      - name: core_liquidation_process_events_rollup
+      - name: core_liquidation_events_rollup
 
       - name: core_obligation_events_rollup
 
