--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
 
   keycloak:
     image: quay.io/keycloak/keycloak:26.3.2
-    ports: [8081:8080]
+    ports: [8081:8080, 9000:9000]
     environment:
       KC_DB: postgres
       KC_DB_URL: jdbc:postgresql://keycloak-pg:5432/default
