--- a/typos.toml
+++ b/typos.toml
@@ -7,6 +7,7 @@ extend-exclude = [
 	"/apps/admin-panel/lib/graphql/generated/mocks.ts",
 	"/apps/admin-panel/messages/es.json",
 	"/apps/admin-panel/cypress/manuals/*",
+	"dagster/src/dbt_lana_dw/*",
 	"dev/keycloak/internal-realm.json",
 	"dev/keycloak/customer-realm.json",
 	"docs/mermaid-init.js",
