--- a/.envrc
+++ b/.envrc
@@ -7,5 +7,12 @@ export SA_CREDS_BASE64="${TF_VAR_sa_creds}"
 
 export DATAFORM_SCHEMA_SUFFIX=${TF_VAR_name_prefix}
 
+# BigQuery credentials for Dagster and dbt
+export DBT_BIGQUERY_CREDENTIALS_JSON="$(echo "$TF_VAR_sa_creds" | base64 -d)"
+export TARGET_BIGQUERY_CREDENTIALS_JSON="${DBT_BIGQUERY_CREDENTIALS_JSON}"
+export TARGET_BIGQUERY_DATASET="${USER}_dataset"
+export DBT_BIGQUERY_DATASET="dbt_${USER}"
+export DBT_BIGQUERY_PROJECT="$(echo "$DBT_BIGQUERY_CREDENTIALS_JSON" | jq -r '.project_id')"
+
 export DOCS_BUCKET_NAME="${USER}-lana-documents"
 export REPORTS_BUCKET_NAME="${USER}-lana-documents"
