chore: inject 'domain_configs' into FiscalYears & CoreAccounting services

--- a/core/credit/Cargo.toml
+++ b/core/credit/Cargo.toml
@@ -6,8 +6,16 @@ edition = "2024"
 [features]
 
 fail-on-warnings = []
-graphql = [ "dep:async-graphql", "cala-ledger/graphql", "es-entity/graphql" ]
-json-schema = ["dep:schemars", "cala-ledger/json-schema", "es-entity/json-schema", "core-money/json-schema", "job/json-schema", "core-price/json-schema", "public-id/json-schema"]
+graphql = ["dep:async-graphql", "cala-ledger/graphql", "es-entity/graphql"]
+json-schema = [
+    "dep:schemars",
+    "cala-ledger/json-schema",
+    "es-entity/json-schema",
+    "core-money/json-schema",
+    "job/json-schema",
+    "core-price/json-schema",
+    "public-id/json-schema",
+]
 sim-time = ["dep:sim-time", "es-entity/sim-time"]
 mock-custodian = ["core-custody/mock-custodian"]
 
@@ -22,6 +30,7 @@ core-accounting = { workspace = true }
 audit = { workspace = true }
 authz = { workspace = true }
 obix = { workspace = true }
+domain-config = { workspace = true }
 job = { workspace = true }
 cloud-storage = { workspace = true }
 public-id = { workspace = true }
