--- a/lana/app/Cargo.toml
+++ b/lana/app/Cargo.toml
@@ -46,7 +46,7 @@ document-storage = { workspace = true, features = ["graphql"] }
 public-id = { workspace = true, features = ["graphql"] }
 audit = { workspace = true }
 job = { workspace = true }
-outbox = { workspace = true }
+obix = { workspace = true }
 authz = { workspace = true }
 domain-config = { workspace = true }
 cloud-storage = { workspace = true }
