--- a/lana/events/Cargo.toml
+++ b/lana/events/Cargo.toml
@@ -17,7 +17,7 @@ core-credit = { workspace = true }
 core-deposit = { workspace = true }
 core-report = { workspace = true }
 core-price = { workspace = true }
-outbox = { workspace = true }
+obix = { workspace = true }
 
 serde = { workspace = true }
 strum = { workspace = true }
