--- a/lana/sim-bootstrap/Cargo.toml
+++ b/lana/sim-bootstrap/Cargo.toml
@@ -14,7 +14,7 @@ lana-events = { workspace = true }
 
 sim-time = { workspace = true }
 es-entity = { workspace = true }
-outbox = { workspace = true }
+obix = { workspace = true }
 anyhow = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
