--- a/lana/user-onboarding/Cargo.toml
+++ b/lana/user-onboarding/Cargo.toml
@@ -13,7 +13,7 @@ fail-on-warnings = []
 [dependencies]
 core-access = { workspace = true }
 
-outbox = { workspace = true }
+obix = { workspace = true }
 job = { workspace = true }
 keycloak-client = { workspace = true }
 
