--- a/core/access/Cargo.toml
+++ b/core/access/Cargo.toml
@@ -13,7 +13,6 @@ json-schema = [
     "dep:schemars",
     "es-entity/json-schema",
     "audit/json-schema",
-    "outbox/json-schema",
     "governance/json-schema",
 ]
 
@@ -22,7 +21,7 @@ governance = { workspace = true, optional = true }
 
 audit = { workspace = true }
 authz = { workspace = true }
-outbox = { workspace = true }
+obix = { workspace = true }
 
 es-entity = { workspace = true }
 strum = { workspace = true }
