--- a/lana/deposit-sync/Cargo.toml
+++ b/lana/deposit-sync/Cargo.toml
@@ -14,7 +14,7 @@ core-money = { workspace = true }
 governance = { workspace = true }
 
 sumsub = { workspace = true }
-outbox = { workspace = true }
+obix = { workspace = true }
 job = { workspace = true }
 audit = { workspace = true }
 authz = { workspace = true }
