--- a/core/domain-config/Cargo.toml
+++ b/core/domain-config/Cargo.toml
@@ -16,5 +16,9 @@ sqlx = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-utils = { workspace = true }
+rust_decimal = { workspace = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 schemars = { workspace = true, optional = true }
+
+[dev-dependencies]
+rust_decimal_macros = { workspace = true }
