--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -24,6 +24,7 @@ base16ct = { version = "0.2", default-features = false, features = ["alloc"] }
 base64 = { version = "0.22" }
 byteorder = { version = "1" }
 bytes = { version = "1", features = ["serde"] }
+cala-cel-interpreter = { version = "0.13", default-features = false, features = ["json-schema"] }
 cala-ledger = { version = "0.13", default-features = false, features = ["graphql", "json-schema"] }
 cala-ledger-core-types = { version = "0.13", default-features = false, features = ["graphql", "json-schema"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -38,7 +39,7 @@ digest = { version = "0.10", features = ["mac", "oid", "std"] }
 ecdsa = { version = "0.16", default-features = false, features = ["pem", "signing", "std", "verifying"] }
 either = { version = "1", features = ["serde", "use_std"] }
 elliptic-curve = { version = "0.13", default-features = false, features = ["digest", "hazmat", "pem", "std"] }
-es-entity = { version = "0.10.6", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "sim-time", "tracing-context"] }
+es-entity = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "sim-time", "tracing-context"] }
 ff = { version = "0.13", default-features = false, features = ["alloc"] }
 form_urlencoded = { version = "1" }
 futures-channel = { version = "0.3", features = ["sink"] }
@@ -58,6 +59,7 @@ lalrpop-util = { version = "0.22", features = ["lexer"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
 num-traits = { version = "0.2", features = ["i128"] }
+obix = { version = "0.1", features = ["tracing"] }
 once_cell = { version = "1", features = ["portable-atomic"] }
 opentelemetry-http = { version = "0.31", features = ["reqwest-rustls-webpki-roots"] }
 opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls-webpki-roots"] }
@@ -102,6 +104,7 @@ base16ct = { version = "0.2", default-features = false, features = ["alloc"] }
 base64 = { version = "0.22" }
 byteorder = { version = "1" }
 bytes = { version = "1", features = ["serde"] }
+cala-cel-interpreter = { version = "0.13", default-features = false, features = ["json-schema"] }
 cala-ledger = { version = "0.13", default-features = false, features = ["graphql", "json-schema"] }
 cala-ledger-core-types = { version = "0.13", default-features = false, features = ["graphql", "json-schema"] }
 cc = { version = "1", default-features = false, features = ["parallel"] }
@@ -117,7 +120,7 @@ digest = { version = "0.10", features = ["mac", "oid", "std"] }
 ecdsa = { version = "0.16", default-features = false, features = ["pem", "signing", "std", "verifying"] }
 either = { version = "1", features = ["serde", "use_std"] }
 elliptic-curve = { version = "0.13", default-features = false, features = ["digest", "hazmat", "pem", "std"] }
-es-entity = { version = "0.10.6", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "sim-time", "tracing-context"] }
+es-entity = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "sim-time", "tracing-context"] }
 es-entity-macros = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument"] }
 ff = { version = "0.13", default-features = false, features = ["alloc"] }
 form_urlencoded = { version = "1" }
@@ -138,6 +141,8 @@ lalrpop-util = { version = "0.22", features = ["lexer"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
 num-traits = { version = "0.2", features = ["i128"] }
+obix = { version = "0.1", features = ["tracing"] }
+obix-macros = { version = "0.1", default-features = false, features = ["tracing"] }
 once_cell = { version = "1", features = ["portable-atomic"] }
 opentelemetry-http = { version = "0.31", features = ["reqwest-rustls-webpki-roots"] }
 opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls-webpki-roots"] }
@@ -189,6 +194,7 @@ ignored = [
     "base64",
     "byteorder",
     "bytes",
+    "cala-cel-interpreter",
     "cala-ledger",
     "cala-ledger-core-types",
     "chrono",
@@ -232,6 +238,8 @@ ignored = [
     "log",
     "memchr",
     "num-traits",
+    "obix",
+    "obix-macros",
     "once_cell",
     "opentelemetry",
     "opentelemetry-http",
