--- a/apps/customer-portal/package.json
+++ b/apps/customer-portal/package.json
@@ -57,6 +57,7 @@
     "@storybook/addon-onboarding": "^10.1.10",
     "@storybook/nextjs": "^10.1.10",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "20",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
@@ -72,7 +73,7 @@
     "postcss": "^8",
     "prettier": "^3.7.4",
     "storybook": "^10.1.10",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^4.1.14",
     "typescript": "5"
   }
 }
