chore: udf functions created once at start

--- a/dagster/src/dbt_lana_dw/dbt_project.yml
+++ b/dagster/src/dbt_lana_dw/dbt_project.yml
@@ -5,8 +5,9 @@
 name: 'dbt_lana_dw'
 version: '1.0.0'
 
-on-run-start:
-- '{{create_udfs()}}'
+# UDFs are created once at Dagster startup (see resources/dbt.py)
+# on-run-start:
+# - '{{create_udfs()}}'
 
 vars:
   sats_per_bitcoin: '100000000'
