refactor: custody to use inbox

--- a/core/custody/Cargo.toml
+++ b/core/custody/Cargo.toml
@@ -13,6 +13,7 @@ mock-custodian = []
 audit = { workspace = true }
 authz = { workspace = true }
 obix = { workspace = true }
+job = { workspace = true }
 bitgo = { workspace = true }
 komainu = { workspace = true }
 core-money = { workspace = true }
