--- a/core/credit/Cargo.toml
+++ b/core/credit/Cargo.toml
@@ -32,6 +32,7 @@ authz = { workspace = true }
 obix = { workspace = true }
 domain-config = { workspace = true }
 job = { workspace = true }
+job_new = { version = "0.5.0", package = "job" }
 cloud-storage = { workspace = true }
 public-id = { workspace = true }
 
