--- a/core/credit/Cargo.toml
+++ b/core/credit/Cargo.toml
@@ -62,6 +62,7 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [dev-dependencies]
 document-storage = { workspace = true }
+core-accounting = { workspace = true, features = ["test-dummy"] }
 authz = { workspace = true, features = ["test-dummy"] }
 anyhow = { workspace = true }
 rand = { workspace = true }
