--- a/core/deposit/Cargo.toml
+++ b/core/deposit/Cargo.toml
@@ -58,6 +58,7 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 [dev-dependencies]
 authz = { workspace = true, features = ["test-dummy"] }
 document-storage = { workspace = true }
+core-accounting = { workspace = true, features = ["test-dummy"] }
 
 tokio = { workspace = true }
 anyhow = { workspace = true }
