feat: dagster lana dw dbt step three clean (#3253)
* feat: sync dbt versions

* feat: add el salvador report specific macros

* feat: add test macros

* fix: last price name to currency suffix

* feat: add sumsub applicants for identities

* feat: add static tables

* feat: add non-regulatory pre report tables

* feat: add el salvador specific pre report tables

* fix: typos

* fix: envrc

* chore: udf functions created once at start

* chore: deal with empty source tables (#3286)

* fix: irrelevant comment

* fix: specific typos

* fix: dagster fmt

* chore: more generous tiemout for iris, remove wrong skip

* chore: remove fluff tests, adjust polling

---------

Co-authored-by: pablo <pablomartincalvo@gmail.com>

--- a/typos.toml
+++ b/typos.toml
@@ -7,6 +7,10 @@ extend-exclude = [
 	"/apps/admin-panel/lib/graphql/generated/mocks.ts",
 	"/apps/admin-panel/messages/es.json",
 	"/apps/admin-panel/cypress/manuals/*",
+	"dagster/src/dbt_lana_dw/macros/el-salvador-ssf/*",
+	"dagster/src/dbt_lana_dw/models/*/el-salvador-ssf/*",
+	"dagster/src/dbt_lana_dw/models/*/uif/*",
+	"dagster/src/dbt_lana_dw/models/outputs/non-regulatory/*",
 	"dev/keycloak/internal-realm.json",
 	"dev/keycloak/customer-realm.json",
 	"docs/mermaid-init.js",
