--- a/core/accounting/Cargo.toml
+++ b/core/accounting/Cargo.toml
@@ -14,7 +14,7 @@ authz = { workspace = true }
 domain-config = { workspace = true }
 core-money = { workspace = true }
 document-storage = { workspace = true }
-job = { workspace = true }
+job = { version = "0.6.0" }
 cloud-storage = { workspace = true }
 
 cala-ledger = { workspace = true }
