--- a/core/domain-config/Cargo.toml
+++ b/core/domain-config/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = { workspace = true }
 sqlx = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+tracing-macros = { workspace = true }
 tracing-utils = { workspace = true }
 rust_decimal = { workspace = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
