--- a/bats/lana-normal.yml
+++ b/bats/lana-normal.yml
@@ -27,3 +27,4 @@ app:
     deposit_config_path: "./bats/accounting-init/deposit-module-config.json"
     balance_sheet_config_path: "./bats/accounting-init/balance-sheet-module-config.json"
     profit_and_loss_config_path: "./bats/accounting-init/profit-and-loss-module-config.json"
+    fiscal_year_config_path: "./bats/accounting-init/fiscal-year-module-config.json"
