--- a/dev/lana.default.yml
+++ b/dev/lana.default.yml
@@ -42,6 +42,7 @@ app:
     credit_config_path: null
     balance_sheet_config_path: null
     profit_and_loss_config_path: null
+    fiscal_year_config_path: null
   custody:
     custody_providers:
       komainu_directory:
