--- a/bats/accounting-init/credit-module-config.json
+++ b/bats/accounting-init/credit-module-config.json
@@ -2,12 +2,15 @@
     "facility_omnibus_parent_code": "81.01",
     "collateral_omnibus_parent_code": "81.02",
     "liquidation_proceeds_omnibus_parent_code": "81.03",
+    "payments_made_omnibus_parent_code": "81.04",
+    "interest_added_to_obligations_omnibus_parent_code": "81.05",
     "facility_parent_code": "81.01",
     "collateral_parent_code": "81.02",
     "collateral_in_liquidation_parent_code": "81.03",
     "interest_income_parent_code": "71.01",
     "fee_income_parent_code": "71.02",
     "payment_holding_parent_code": "11.99.0201",
+    "uncovered_outstanding_parent_code": "81.06",
     "short_term_individual_interest_receivable_parent_code": "11.02.0201",
     "short_term_government_entity_interest_receivable_parent_code": "11.02.0201",
     "short_term_private_company_interest_receivable_parent_code": "11.02.0201",
