--- a/apps/admin-panel/package.json
+++ b/apps/admin-panel/package.json
@@ -44,6 +44,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
+    "graphql": "^16.9.0",
+    "graphql-sse": "^2.6.0",
     "zod": "^4.3.4"
   },
   "devDependencies": {
