--- a/lana/admin-server/Cargo.toml
+++ b/lana/admin-server/Cargo.toml
@@ -33,4 +33,9 @@ tokio = { workspace = true }
 rust_decimal = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
+
+tokio-stream = { workspace = true }
+futures = { workspace = true }
+
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
+
