--- a/typos.toml
+++ b/typos.toml
@@ -8,6 +8,7 @@ extend-exclude = [
 	"/apps/admin-panel/messages/es.json",
 	"/apps/admin-panel/cypress/manuals/*",
 	"dagster/src/dbt_lana_dw/macros/el-salvador-ssf/*",
+	"dagster/src/dbt_lana_dw/seeds/el-salvador-ssf/*",
 	"dagster/src/dbt_lana_dw/models/*/el-salvador-ssf/*",
 	"dagster/src/dbt_lana_dw/models/*/uif/*",
 	"dagster/src/dbt_lana_dw/models/outputs/non-regulatory/*",
