refactor: user onboarding to use new job

--- a/lana/user-onboarding/Cargo.toml
+++ b/lana/user-onboarding/Cargo.toml
@@ -14,7 +14,7 @@ fail-on-warnings = []
 core-access = { workspace = true }
 
 obix = { workspace = true }
-job = { workspace = true }
+job = { version = "0.6.0" }
 keycloak-client = { workspace = true }
 
 es-entity = { workspace = true, features = ["graphql"] }
