chore: enable es-entity/graphql in domain-config

--- a/lana/admin-server/Cargo.toml
+++ b/lana/admin-server/Cargo.toml
@@ -11,7 +11,7 @@ sumsub-testing = ["lana-app/sumsub-testing"]
 
 [dependencies]
 lana-app = { workspace = true }
-domain-config = { workspace = true }
+domain-config = { workspace = true, features = ["graphql"] }
 
 audit = { workspace = true }
 tracing-utils = { workspace = true, features = ["http"] }
