--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,6 +163,7 @@ rand = "0.9"
 serial_test = { version = "3.2.0", features = ["file_locks"] }
 chacha20poly1305 = "0.10.1"
 handlebars = "6.3.2"
+inventory = "0.3.15"
 schemars = { version = "1.1.0", features = ["derive", "chrono04", "rust_decimal1"] }
 tempfile = "3.23.0"
 p256 = "0.13.2"
