--- a/core/domain-config/Cargo.toml
+++ b/core/domain-config/Cargo.toml
@@ -12,6 +12,7 @@ es-entity = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 derive_builder = { workspace = true }
 serde_json = { workspace = true }
+inventory = { workspace = true }
 sqlx = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
