ci: disable dagster compilation in bats workflow

--- a/.github/workflows/bats.yml
+++ b/.github/workflows/bats.yml
@@ -19,6 +19,8 @@ jobs:
           skipPush: true
       - name: Run BATS tests
         run: nix run .#bats
+        env:
+          DAGSTER: "false"
           
       - name: Rename bats log
         if: always()
