--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -229,6 +229,7 @@ ignored = [
     "hashbrown",
     "hashbrown-3575ec1268b04181",
     "hashbrown-582f2526e08bb6a0",
+    "hashbrown-986da7b5efc2b80e",
     "hmac",
     "hyper",
     "hyper-util",
