--- a/lana/sim-bootstrap/Cargo.toml
+++ b/lana/sim-bootstrap/Cargo.toml
@@ -22,4 +22,7 @@ serde = { workspace = true }
 tokio = { workspace = true }
 futures = { workspace = true }
 tracing = { workspace = true }
+thiserror = { workspace = true }
+tracing-macros = { workspace = true }
+tracing-utils = { workspace = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
