chore: dependabot ignore internal crate

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,13 @@ updates:
     all-dependencies:
       patterns:
         - "*"
+  ignore:
+    - dependency-name: "job"
+    - dependency-name: "obix"
+    - dependency-name: "es-entity"
+    - dependency-name: "cala-ledger"
+    - dependency-name: "cala-cel-interpreter"
+    - dependency-name: "sim-time"
 
 - package-ecosystem: "npm"
   directory: "/"
