chore: ignore jobs deps in hakari workspace temporarily

--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -55,7 +55,8 @@ hyper-util = { version = "0.1", features = ["client-legacy", "server-auto", "ser
 idna = { version = "1" }
 indexmap = { version = "2", features = ["serde"] }
 inout = { version = "0.1", default-features = false, features = ["block-padding"] }
-job = { version = "0.4", default-features = false, features = ["json-schema", "sim-time"] }
+job-3b31131e45eafb45 = { package = "job", version = "0.6", default-features = false, features = ["json-schema"] }
+job-9fbad63c4bcf4a8f = { package = "job", version = "0.4", default-features = false, features = ["json-schema", "sim-time"] }
 lalrpop-util = { version = "0.22", features = ["lexer"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
@@ -138,7 +139,8 @@ hyper-util = { version = "0.1", features = ["client-legacy", "server-auto", "ser
 idna = { version = "1" }
 indexmap = { version = "2", features = ["serde"] }
 inout = { version = "0.1", default-features = false, features = ["block-padding"] }
-job = { version = "0.4", default-features = false, features = ["json-schema", "sim-time"] }
+job-3b31131e45eafb45 = { package = "job", version = "0.6", default-features = false, features = ["json-schema"] }
+job-9fbad63c4bcf4a8f = { package = "job", version = "0.4", default-features = false, features = ["json-schema", "sim-time"] }
 lalrpop-util = { version = "0.22", features = ["lexer"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
@@ -237,6 +239,8 @@ ignored = [
     "indexmap",
     "inout",
     "job",
+    "job-3b31131e45eafb45",
+    "job-9fbad63c4bcf4a8f",
     "lalrpop-util",
     "log",
     "memchr",
