--- a/lana/admin-server/Cargo.toml
+++ b/lana/admin-server/Cargo.toml
@@ -12,7 +12,7 @@ sumsub-testing = ["lana-app/sumsub-testing"]
 [dependencies]
 lana-app = { workspace = true }
 domain-config = { workspace = true, features = ["graphql"] }
-
+obix = { workspace = true }
 audit = { workspace = true }
 tracing-utils = { workspace = true, features = ["http"] }
 jwks-utils = { workspace = true }
@@ -38,4 +38,3 @@ tokio-stream = { workspace = true }
 futures = { workspace = true }
 
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
-
