chore: bump es-entity, obix, cala

--- a/lana/customer-sync/Cargo.toml
+++ b/lana/customer-sync/Cargo.toml
@@ -27,7 +27,6 @@ futures = { workspace = true }
 tokio = { workspace = true }
 thiserror = { workspace = true }
 keycloak-client = { workspace = true }
-chrono = { workspace = true }
-sim-time = { workspace = true, optional = true }
+es-entity = { workspace = true }
 lana-events = { workspace = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
