--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -39,7 +39,7 @@ digest = { version = "0.10", features = ["mac", "oid", "std"] }
 ecdsa = { version = "0.16", default-features = false, features = ["pem", "signing", "std", "verifying"] }
 either = { version = "1", features = ["serde", "use_std"] }
 elliptic-curve = { version = "0.13", default-features = false, features = ["digest", "hazmat", "pem", "std"] }
-es-entity = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "sim-time", "tracing-context"] }
+es-entity = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "tracing-context"] }
 ff = { version = "0.13", default-features = false, features = ["alloc"] }
 form_urlencoded = { version = "1" }
 futures-channel = { version = "0.3", features = ["sink"] }
@@ -56,7 +56,7 @@ idna = { version = "1" }
 indexmap = { version = "2", features = ["serde"] }
 inout = { version = "0.1", default-features = false, features = ["block-padding"] }
 job-3b31131e45eafb45 = { package = "job", version = "0.6", default-features = false, features = ["json-schema"] }
-job-9fbad63c4bcf4a8f = { package = "job", version = "0.4", default-features = false, features = ["json-schema", "sim-time"] }
+job-9fbad63c4bcf4a8f = { package = "job", version = "0.4", default-features = false, features = ["json-schema"] }
 lalrpop-util = { version = "0.22", features = ["lexer"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
@@ -122,7 +122,7 @@ digest = { version = "0.10", features = ["mac", "oid", "std"] }
 ecdsa = { version = "0.16", default-features = false, features = ["pem", "signing", "std", "verifying"] }
 either = { version = "1", features = ["serde", "use_std"] }
 elliptic-curve = { version = "0.13", default-features = false, features = ["digest", "hazmat", "pem", "std"] }
-es-entity = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "sim-time", "tracing-context"] }
+es-entity = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "tracing-context"] }
 es-entity-macros = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument"] }
 ff = { version = "0.13", default-features = false, features = ["alloc"] }
 form_urlencoded = { version = "1" }
@@ -140,7 +140,7 @@ idna = { version = "1" }
 indexmap = { version = "2", features = ["serde"] }
 inout = { version = "0.1", default-features = false, features = ["block-padding"] }
 job-3b31131e45eafb45 = { package = "job", version = "0.6", default-features = false, features = ["json-schema"] }
-job-9fbad63c4bcf4a8f = { package = "job", version = "0.4", default-features = false, features = ["json-schema", "sim-time"] }
+job-9fbad63c4bcf4a8f = { package = "job", version = "0.4", default-features = false, features = ["json-schema"] }
 lalrpop-util = { version = "0.22", features = ["lexer"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
