--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -1,4 +1,4 @@
-FROM alpine:latest as load
+FROM alpine:latest
 
 RUN apk add --no-cache \
     github-cli \
@@ -16,11 +16,11 @@ RUN mkdir lana-home && mkdir lana && cd lana \
 
 FROM gcr.io/distroless/static
 
-COPY --from=load --chmod=0755 /usr/local/bin/lana-cli /bin/lana-cli
-COPY --from=load --chown=1000:0 --chmod=755 /lana-home /lana
+COPY --from=0 --chmod=0755 /usr/local/bin/lana-cli /bin/lana-cli
+COPY --from=0 --chown=1000:0 --chmod=755 /lana-home /lana
 # Copy Liberation fonts and FontConfig configuration
-COPY --from=load /usr/share/fonts/liberation /usr/share/fonts/liberation
-COPY --from=load /etc/fonts/fonts.conf /etc/fonts/fonts.conf
+COPY --from=0 /usr/share/fonts/liberation /usr/share/fonts/liberation
+COPY --from=0 /etc/fonts/fonts.conf /etc/fonts/fonts.conf
   
 USER 1000
   
