--- a/dagster/src/dbt_lana_dw/dbt_project.yml
+++ b/dagster/src/dbt_lana_dw/dbt_project.yml
@@ -46,3 +46,8 @@ models:
     # Config indicated by + and applies to all files under models/example/
     # example:
     #   +materialized: view
+
+# Seed configurations for static data tables
+seeds:
+  dbt_lana_dw:
+    +quote_columns: true
